app/styles/styles.css
@charset "UTF-8";

/*@import url("https://fonts.googleapis.com/icon?family=Material+Icons");*/

body {
	font: 100% "Roboto", Arial, sans-serif;
	/*height: 100vh;*/
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	/*background: #00b4ff;*/
}

.my-cyan {
	background-color: #00C8DF;
}

.my-green {
	background-color: #448528;
}

.my-teal {
	background-color: #0fa6a0;
}



#sky-container {
	color: #333;
    /*bottom: 0;
	left: 0;*/
	/*padding-top: 50px;*/
	/*position: relative;*/
	/*right: 0;
	top: 0;
	z-index: 1;*/
	/*padding-bottom: 5em;*/
	/*margin-bottom: 5em;
	margin-top: 3em;*/

	/*height: 100vh;*/
}

.sky-bg {
	background: #00b4ff;
}


/* KEYFRAMES */

@-webkit-keyframes animateCloud {
    0% {
       /*margin-left: -1000px;*/
       /*margin-left: -300px;*/
       transform: translateX(-20vw);
    }
    100% {
        /*margin-left: 100%;*/
        transform: translateX(100vw);
    }
}

@-moz-keyframes animateCloud {
    0% {
        /*margin-left: -1000px;*/
       /*margin-left: -300px;*/
       transform: translateX(-20vw);
    }
    100% {
        /*margin-left: 100%;*/
        transform: translateX(100vw);
    }
}

@keyframes animateCloud {
    0% {
        /*margin-left: -1000px;*/
       /*margin-left: -300px;*/
       transform: translateX(-20vw);
    }
    100% {
        /*margin-left: 100%;*/
        transform: translateX(100vw);
    }
}

/* ANIMATIONS */

.x1, .x2, .x3, .x4, .x5 {
	position: absolute;
}

.x1 {
	-webkit-animation: animateCloud linear infinite;
	-moz-animation: animateCloud linear infinite;
	animation: animateCloud linear infinite;

	animation-duration: 35s;
}
.x1 .cloud {
	-webkit-transform: scale(0.65);
	-moz-transform: scale(0.65);
	transform: scale(0.65);
}

.x2 {
	-webkit-animation: animateCloud linear infinite;
	-moz-animation: animateCloud linear infinite;
	animation: animateCloud linear infinite;

	animation-duration: 30s;
}
.x2 .cloud {
	-webkit-transform: scale(0.55);
	-moz-transform: scale(0.55);
	transform: scale(0.55);	
}

.x3 {
	-webkit-animation: animateCloud linear infinite;
	-moz-animation: animateCloud linear infinite;
	animation: animateCloud linear infinite;

	animation-duration: 25s;	
}
.x3 .cloud {
	-webkit-transform: scale(0.5);
	-moz-transform: scale(0.5);
	transform: scale(0.5);	
}

.x4 {
	-webkit-animation: animateCloud linear infinite;
	-moz-animation: animateCloud linear infinite;
	animation: animateCloud linear infinite;

	animation-duration: 20s;
}
.x4 .cloud {
	-webkit-transform: scale(0.4);
	-moz-transform: scale(0.4);
	transform: scale(0.4);
}

.x5 {
	-webkit-animation: animateCloud linear infinite;
	-moz-animation: animateCloud linear infinite;
	animation: animateCloud linear infinite;

	animation-duration: 18s;	
}
.x5 .cloud {
	-webkit-transform: scale(0.3);
	-moz-transform: scale(0.3);
	transform: scale(0.3);
}

/* OBJECTS */

.cloud {
	background: #fff;
	background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
	background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
	
	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	border-radius: 100px;
	
	-webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
	-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);

	height: 120px;
	position: relative;
	width: 350px;
}

.cloud:after, .cloud:before {
    background: #fff;
	content: '';
	position: absolute;
	z-indeX: -1;
}

.cloud:after {
	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	border-radius: 100px;

	height: 100px;
	left: 50px;
	top: -50px;
	width: 100px;
}

.cloud:before {
	-webkit-border-radius: 200px;
	-moz-border-radius: 200px;
	border-radius: 200px;

	width: 180px;
	height: 180px;
	right: 50px;
	top: -90px;
}

.cloud h3 {
	text-align: center;
	padding-top: 6%;
	font-weight: bold;

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;

	height: 100%;

	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	border-radius: 100px;
	
  	background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
	background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
}

.cloud h3:hover {
	cursor: default;
}



/* Tree styles */

.sapUiBody {
	background-color: transparent !important;

	padding-top: 5em;
}

.dennisseah-orgchart .node {
  cursor: pointer;
}
.dennisseah-orgchart .node circle {
  fill: #fff;
  stroke: steelblue;
  stroke-width: 1.5px;
}
.dennisseah-orgchart .node text {
  font: 16px "Roboto", Arial, sans-serif;
  color: #333;
  font-weight: bold;
}

.dennisseah-orgchart .link {
  fill: none;
  stroke: #ccc;
  stroke-width: 1.5px;
}

.dennisseah-orgchart {
  overflow: hidden;
}

rect {
	stroke: transparent;
}


g.tree-container g.node[transform="translate(0,0)"] {

	display: none;
}


.node-flash {
	-webkit-animation-duration: 3.5s;
	animation-duration: 3.5s;
}




.row {
	margin-bottom: 0;
}


/*.section-title {
	background-color: white;
    color: #00B4FF;
    padding: 0.25em;
    border-radius: 5em;
    font-weight: bold;
    
    -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
	-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
}*/

.section {
	z-index: -2;

	padding: 0;
}
/* ... */

